services/python-staticjs-furever-home/python-adoption-judge-usvc/openshift/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoption-judge-usvc
  labels:
    app: furever-home-adoption-judge-usvc
    app.kubernetes.io/name: adoption-judge-usvc
    app.kubernetes.io/part-of: furever-home
    component: deployment
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"petadoption-db"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: furever-home-adoption-judge-usvc
  template:
    metadata:
      labels:
        app: furever-home-adoption-judge-usvc
    spec:
      containers:
      - name: adoption-judge-usvc
        imagePullPolicy: Always
        image: quay.io/kenmoini/furever-home-adoption-judge-usvc:latest
        ports:
          - containerPort: 8080
            protocol: TCP
