services/python-staticjs-furever-home/python-adoption-judge-usvc/openshift/02-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: furever-home-adoption-judge-usvc
    app.kubernetes.io/name: furever-home-adoption-judge-usvc
    app.kubernetes.io/part-of: furever-home-adoption-judge-usvc
    component: service
  name: furever-home-adoption-judge-usvc
spec:
  ports:
    - name: furever-home-adoption-judge-usvc
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: furever-home-adoption-judge-usvc
  type: ClusterIP
