services/python-staticjs-furever-home/python-adoption-judge-usvc/openshift/03-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: furever-home-adoption-judge-usvc
  labels:
    app: furever-home-adoption-judge-usvc
    app.kubernetes.io/name: furever-home-adoption-judge-usvc
    app.kubernetes.io/part-of: furever-home-adoption-judge-usvc
    component: route
spec:
  to:
    kind: Service
    name: furever-home-adoption-judge-usvc
    weight: 100
  port:
    targetPort: furever-home-adoption-judge-usvc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
